--- a/MavenTest/pom.xml
+++ b/MavenTest/pom.xml
@@ -15,14 +15,18 @@
 			</plugin>
 
 		<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>3.1.0</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
-					<mainClass>example.Example</mainClass>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>example.Example</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
-			</plugin>	
-
+			</plugin>
+			
 		</plugins>
 	</build>
 </project>
